yaml/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magicbox-server-service
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  selector:
    app: magicbox-server
