yaml/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magicbox-client-service
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: magicbox
